--- a/mysql/manifest.yaml
+++ b/mysql/manifest.yaml
@@ -25,3 +25,17 @@ spec:
       containers:
       - name: mysql
         image: sriteja90/mysql:1.0.0
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: mysql
+spec:
+  selector:
+      app: mysql
+      teir: mysql
+      project:  expense
+  ports:
+  - protocol: TCP
+    port: 3306
+    targetPort: 3306
